--- a/runtracker/templates/runtracker/index.html
+++ b/runtracker/templates/runtracker/index.html
@@ -29,7 +29,7 @@
             <div class="field">
                <div class="ui left icon input">
                   <i class="user icon"></i>
-                  <input type="email" name="email" placeholder="E-mail address">
+                  <input type="email" name="username" placeholder="E-mail address">
                </div>
             </div>
             <div class="field">
