--- a/runtracker/templates/runtracker/index.html
+++ b/runtracker/templates/runtracker/index.html
@@ -12,7 +12,7 @@
 <div class="ui middle aligned center aligned grid">
    <div class="column">
       <h1 class="ui image header">
-         <img class="image" src='{% static "runtracker/images/Rlogo.png" %}'>
+         <img class="image" src='{% static "runtracker/images/logo.png" %}'>
          <div class="content">
             Log-in to RunTracker
          </div>
