Added '/' to end of links to make them work again. Added favicon.

--- a/runtracker/templates/runtracker/dashboard.html
+++ b/runtracker/templates/runtracker/dashboard.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    Hi {{ user.first_name }}!
-   <a href="/logout">Log out</a>
+   <a href="/logout/">Log out</a>
    <form >
       <label>Variable</label>
       <select id="y-variable">
