--- a/runtracker/templates/runtracker/head.html
+++ b/runtracker/templates/runtracker/head.html
@@ -5,3 +5,4 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src='{% static "semantic/dist/semantic.min.js" %}'></script>
 <script src='{% static "runtracker/scripts/closemessage.js" %}'></script>
+<link rel="shortcut icon" href='{% static "runtracker/images/favicon.ico" %}'>
