Names now added to user model in signup. ChangedgetRunsSince to take a number of days.

--- a/runtracker/templates/runtracker/dashboard.html
+++ b/runtracker/templates/runtracker/dashboard.html
@@ -49,7 +49,7 @@
    </div>
    <form action="addrun" method="POST">
       <label for="distance">Distance (km)</label>
-      <input type="number" id="distance" required min=0></input>
+      <input type="number" id="distance" min=0></input>
       <label for="hours">Hours</label>
       <input type="number" id="hours" min=0></input>
       <label for="minutes">Minutes</label>
@@ -57,7 +57,7 @@
       <label for="seconds">Seconds</label>
       <input type="number" id="seconds" min=0></input>
       <label for="datetime">Date</label>
-      <input type="datetime-local" id="datetime" required></input>
+      <input type="datetime-local" id="datetime"></input>
       <input id="addRunButton" type="button" value="Add Run"></input>
    </form>
    <table>
